<resources>
    <string name="app_name">Fitness</string>
    <string name="start">Начать</string>
    <string name="continuee">Продолжить</string>
    <string name="phone_number">Номер телефона</string>
    <string name="paste_sms_code">Код подтверждения из СМС</string>
    <string name="change_phone_number">Изменить номер</string>
    <string name="name">Имя</string>
    <string name="your_goal">Ваша цель</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="age">Возврасть</string>
    <string name="kg">кг</string>
    <string name="height">Рост</string>
    <string name="weight">Весь</string>
    <string name="notification">Уведомления</string>
    <string name="chat_with_coach">Чат с тренером</string>
    <string name="home">Главное меню</string>
    <string name="progress">Прогресс</string>
    <string name="workouts">Тренировки</string>
    <string name="see_workouts">Посмотреть тренировки</string>
    <string name="update_data">Обновить данные</string>
    <string name="calendar">Календарь</string>
    <string name="body">Тела</string>
    <string name="username">Username</string>
    <string name="dummy_phone_number">+998 90 484 48 32</string>
    <string name="profile">Профиль</string>
    <string name="subscriptions">Подписки</string>
    <string name="about_us">О нас</string>
    <string name="error_invalid_phone_number">Неверный номер телефона</string>
    <string name="error_something_went_wrong">Что-то пошло не так</string>
    <string name="about_text">Мы создаем тренировки, которые помогут вам стать сильнее, выносливее и увереннее в себе. Наши авторские методики разработаны профессиональным спортсменом и тренером, чтобы каждый мог достичь своих целей — будь то снижение веса, набор мышечной массы или улучшение физической формы.\nПрисоединяйтесь к нам и начните свой путь к лучшей версии себя уже сегодня!</string>
    <string name="about_title">Добро пожаловать в Fitness App</string>
    <string name="exit">Выход</string>
    <string name="message_are_your_sure_to_leave">Вы уверены, что хотите выйти?</string>
    <string name="stay">Остаться</string>
    <string name="error_network_state">Проверьте подключение к сети</string>
    <string name="retry">Попробуйте еще раз</string>
    <string name="buy">Купить</string>
    <string name="free_lessons">Бесплатные уроки</string>
    <string name="description">Описание</string>
    <string name="checklist">Чек-лист</string>
    <string name="finish">Завершить</string>
    <string name="modules">Модули</string>
    <string name="packs">Пакеты</string>
    <string name="lessons">Уроки</string>
    <string name="finish_module_message">Внимание: после завершения этого модуля у вас больше не будет доступа к этим урокам. Нажатие «Завершить модуль» означает, что вы согласны с этим правилом.</string>
    <string name="finish_module">Завершить модуль</string>
    <string name="dissent">Несогласие</string>
    <string name="placeholder_lessons">%1$d Уроки</string>
    <string name="lesson_unavailable">Урок недоступен</string>
    <string name="message_lesson_unavailable">Чтобы получить доступ к уроку, завершите последний урок</string>
    <string name="ok">Хорошо</string>
    <string name="placeholder_current_module">%1$s (Текущий)</string>
    <string name="cd_icon_next">Icon next</string>
    <string name="cd_logo">Logo</string>
    <string name="cd_send_button">Send Button</string>
    <string name="message">Сообщение</string>
    <string name="placeholder_module_number">Модуль %1$s</string>
</resources>