<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_packs"
        android:title="@string/packs"
        android:icon="@drawable/ic_packs_24"
        app:showAsAction="always"/>

  <!--  <item
        android:id="@+id/action_progress"
        android:title="@string/progress"
        android:icon="@drawable/ic_progress" />-->
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_24"
        app:showAsAction="always"/>

</menu>