<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom|center"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:id="@+id/icon_navigate_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/ic_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/tv_enter_sms_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paste_sms_code"
        android:layout_marginVertical="32dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/icon_navigate_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sms_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prefixText="+998"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_sms_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="creditCardSecurityCode"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_change_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_phone_number"
        android:layout_marginVertical="32dp"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/til_sms_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/continuee"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>